--- a/index.html
+++ b/index.html
@@ -12,15 +12,25 @@
 
 <body oncontextmenu="return false;">
     <div id="mainContainer">
-        <a class="iconHolder" onclick="changeIframe('./pages/README.html', 'README.txt', './images/notepad.png')">
+        <a class="iconHolder" onclick="changeIframe('./pages/README.html', 'README.txt - Notepad', './images/notepad.png')">
             <img id="ICON" src="./images/notepad.png">
             <p id="iconLabel">README.txt</p>
         </a>
 
 
-        <a class="iconHolder" onclick="changeIframe('./pages/placeholder.html', 'part1.txt', './images/notepad.png')">
+        <a class="iconHolder" onclick="changeIframe('./pages/part1.html', 'part1.txt - Notepad', './images/notepad.png')">
             <img id="ICON" src="./images/notepad.png">
             <p id="iconLabel">part1.txt</p>
+        </a>
+
+        <a class="iconHolder" onclick="changeIframe('./pages/part2.html', 'part2.txt - Notepad', './images/notepad.png')">
+            <img id="ICON" src="./images/notepad.png">
+            <p id="iconLabel">part2.txt</p>
+        </a>
+
+        <a class="iconHolder" onclick="changeIframe('./pages/part3.html', 'part3.txt - Notepad', './images/notepad.png')">
+            <img id="ICON" src="./images/notepad.png">
+            <p id="iconLabel">part3.txt</p>
         </a>
         <!--CONTINUE-->
 
