--- a/pages/part2.html
+++ b/pages/part2.html
@@ -38,10 +38,16 @@
             height: auto;
         }
 
-        #membersList {
-            margin: 0px;
-            padding-left: 10px;
+        ul {
+            margin: 0;
+            padding: 0;
         }
+
+        ul > li {
+            list-style: none;
+            margin-bottom: 20px;
+        }
+
     </style>
 </head>
 
@@ -57,19 +63,15 @@
     -->
 
     <div id="content">
-        <p><i>We recommend viewing our site with a desktop or in landscape mode + F11 (Fullscreen)</i></p>
-        <p>[ Yes we re-used our <a href="https://jabaitech.github.io/comprog1-java-windows/" target="_blank">'Windos Teen' (Windows 10)</a> inspired web design to recreate this one. ]</p>
-        <p>This is a <i>Windows 98</i> inspired web design for CP1,2 x M.I.L</p>
-        <p>--- Members ---</p>
-        <ol id="membersList">
-            <li>Punto, Rionne</li>
-            <li>Hernandez, Nash</li>
-            <li>Seloterio, Kenjin</li>
-            <li>Loja, Yuan</li>
-            <li>Santos, Lyka</li>
-            <li>Felipe, John Marie</li>
-            <li>Montecillo, Terence</li>
-        </ol>
+        <p>Selection Criteria - Will it be eye catching or not?</p>
+        <br />
+        <ul>
+            <li><b>Motivation and Vision</b>: <br />Motivation and vision are vital in visual media like films, advertisements, and documentaries, as they inspire audiences, drive narratives, and shape the overall impact of a visual story.</li>
+            <li><b>Relevance and Currency</b>: <br />In visual media, current and appropriate content to its target audience and purpose is referred to as relevance and currency.</li>
+            <li><b>Engaging and Eye-Catching</b>: <br />In order to successfully capture consumers' attention and deliver messages, visual content is essential.</li>
+            <li><b>Easily Updated for Relevance</b>: <br />Since visuals often reflect real-life events and trends, they can be updated easily to remain current.</li>
+            <li><b>Understandable and Cohesive Design</b>: <br />Using harmonious colors, forms, textures, and typography, visual media designers create a unified and clear visual language that improves content engagement and comprehension.</li>
+        </ul>
     </div>
 </body>
 
