--- a/pages/part3.html
+++ b/pages/part3.html
@@ -63,15 +63,22 @@
     -->
 
     <div id="content">
-        <p>Visual Media - Communication that uses images, graphics, or visual to convey information quickly and effectively</p>
+        <p>Design Elements of a Visual Media - Elements?</p>
         <br />
-        <p>Wha are the characteristics of Visual Media?</p>
         <ul>
-            <li><b>Minimizes Text</b>: <br />Visual media relies on images or diagrams to present information, reducing the need for text. </li>
-            <li><b>Quick Message Delivery</b>: <br />Unlike text-based media, visuals allow users to quickly understand and process the intended message.</li>
-            <li><b>Accessible and Recognizable</b>: <br />Visual media is versatile and can be easily accessed and identified due to its varied formats and styles.</li>
-            <li><b>Easily Updated for Relevance</b>: <br />Since visuals often reflect real-life events and trends, they can be updated easily to remain current.</li>
-            <li><b>Highly Customizable and Varied</b>: <br />Visual media can range from simple images to interactive and engaging tools, making it a preferred method of communication for many users.</li>
+            <li>[ <b>Lines</b>, <b>Shapes</b>, <b>Colors</b>, <b>Texture</b> and <b>Form</b> ]</li>
+        </ul>
+
+        <p>------------------------------------------------------------------</p>
+
+        <p>Design Principles of Visual Media</p>
+        <ul>
+            <li><b>Repetition</b>: <br />Consistent use of visual elements to create unity and cohesion.</li>
+            <li><b>Center of Interest</b>: <br />The focal point of a composition that immediately draws the viewer's attention; it is the most critical aspect of visual media.</li>
+            <li><b>Balance</b>: <br />Achieving visual equality in terms of shape, form, color, and value, either through symmetry or asymmetry.</li>
+            <li><b>Harmony</b>: <br />Combining similar visual elements to create a unified and pleasing composition.</li>
+            <li><b>Contrast</b>: <br />Highlighting differences in value to create emphasis or visual tension within a design. </li>
+            <li><b>Perspective</b>: <br />Arranging objects in a two-dimensional space to simulate depth and realism, as they appear in the real world.</li>
         </ul>
     </div>
 </body>
