--- a/pages/part1.html
+++ b/pages/part1.html
@@ -65,7 +65,7 @@
     <div id="content">
         <p>Visual Media - Communication that uses images, graphics, or visual to convey information quickly and effectively</p>
         <br />
-        <p>Wha are the characteristics of Visual Media?</p>
+        <p>What are the characteristics of Visual Media?</p>
         <ul>
             <li><b>Minimizes Text</b>: <br />Visual media relies on images or diagrams to present information, reducing the need for text. </li>
             <li><b>Quick Message Delivery</b>: <br />Unlike text-based media, visuals allow users to quickly understand and process the intended message.</li>
