updated scroll bar and minor fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wendos 98</title>
+    <title>Windos 98</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/winLogo.png">
     <script src="./script.js"></script>
@@ -55,7 +55,7 @@
             </div>
 
             <div id="window">
-                <iframe name="FRAME" id="content-iframe" frameborder="0" scrolling="no" allowTransparency="no" src="./pages/placeholder.html"></iframe>
+                <iframe name="FRAME" id="content-iframe" frameborder="0" scrolling="yes" allowTransparency="no" src="./pages/placeholder.html"></iframe>
             </div>
         </div>
         
