--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <img id="ICON" src="./images/notepad.png">
             <p id="iconLabel">part3.txt</p>
         </a>
+
+        <a class="iconHolder" onclick="changeIframe('./pages/easteregg.html', 'source.html - Notepad', './images/notepad.png')">
+            <img id="ICON" src="./images/notepad.png">
+            <p id="iconLabel">source.html</p>
+        </a>
         <!--CONTINUE-->
 
     </div>
