--- a/pages/easteregg.html
+++ b/pages/easteregg.html
@@ -26,9 +26,8 @@
             cursor: text;
         }
 
-
-         /* CUSTOM SCROLL BAR*/
-         ::-webkit-scrollbar {
+        /* CUSTOM SCROLL BAR*/
+        ::-webkit-scrollbar {
             width: 16px;
             height: 16px;
             background: none;
@@ -88,43 +87,32 @@
             /*user-drag: none;*/
         }
 
-        #content {
-            height: auto;
-            margin: 0;
-            padding: 0;
-        }
-
-        ul {
-            margin: 0;
-            padding: 0;
-        }
-
-        ul>li {
-            list-style: none;
-            margin-bottom: 20px;
+        code {
+            font-family: 'Windows98Font';
         }
     </style>
 </head>
 
 <body oncontextmenu="return false;">
 
+
     <div id="content">
-        <p>Selection Criteria - Will it be eye catching or not?</p>
-        <br />
-        <ul>
-            <li>-- <b>Motivation and Vision</b> -- <br />Motivation and vision are vital in visual media like films,
-                advertisements, and documentaries, as they inspire audiences, drive narratives, and shape the overall
-                impact of a visual story.</li>
-            <li>-- <b>Relevance and Currency</b> -- <br />In visual media, current and appropriate content to its target
-                audience and purpose is referred to as relevance and currency.</li>
-            <li>-- <b>Engaging and Eye-Catching</b> -- <br />In order to successfully capture consumers' attention and
-                deliver messages, visual content is essential.</li>
-            <li>-- <b>Easily Updated for Relevance</b> -- <br />Since visuals often reflect real-life events and trends, they
-                can be updated easily to remain current.</li>
-            <li>-- <b>Understandable and Cohesive Design</b> -- <br />Using harmonious colors, forms, textures, and
-                typography, visual media designers create a unified and clear visual language that improves content
-                engagement and comprehension.</li>
-        </ul>
+        <code>
+            &lt;!DOCTYPE html&gt;<br />
+            <br />&lt;html lang=&quot;en&quot;&gt;<br />
+            &#160;&#160;&lt;head&gt;<br />
+            &#160;&#160;&lt;meta charset=&quot;UTF-8&quot;&gt;
+            &#160;&#160;&lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;<br />
+            &#160;&#160;&lt;title&gt;EasterEgg&lt;/title&gt;<br />
+            &#160;&lt;/head&gt;<br />
+            <br />&#160;&lt;body&gt;<br />
+            &#160;&#160;&lt;h1&gt;Windos 98&lt;/h1&gt;<br />
+            &#160;&#160;&lt;p&gt;This is the source code&lt;/p&gt;<br />
+            <br />
+            &#160;&#160;&lt;p&gt;Visual Media site :3&lt;/p&gt;<br />
+            &#160;&lt;/body&gt;<br />
+            &lt;/html&gt;<br />
+        </code>
     </div>
 </body>
 
