--- a/pages/part1.html
+++ b/pages/part1.html
@@ -107,25 +107,16 @@
 
 <body oncontextmenu="return false;">
 
-    <!--
-    <div id="sidebar">
-        <li>
-            <ul><p id="facebook">Facebook</p></ul>
-            <ul><img id="sidebar_profile" src="../images/pfp1.png"><p>Profile</p></ul>
-        </li>
-    </div>
-    -->
-
     <div id="content">
         <p>Visual Media - Communication that uses images, graphics, or visual to convey information quickly and effectively</p>
         <br />
         <p>What are the characteristics of Visual Media?</p>
         <ul>
-            <li><b>Minimizes Text</b>: <br />Visual media relies on images or diagrams to present information, reducing the need for text. </li>
-            <li><b>Quick Message Delivery</b>: <br />Unlike text-based media, visuals allow users to quickly understand and process the intended message.</li>
-            <li><b>Accessible and Recognizable</b>: <br />Visual media is versatile and can be easily accessed and identified due to its varied formats and styles.</li>
-            <li><b>Easily Updated for Relevance</b>: <br />Since visuals often reflect real-life events and trends, they can be updated easily to remain current.</li>
-            <li><b>Highly Customizable and Varied</b>: <br />Visual media can range from simple images to interactive and engaging tools, making it a preferred method of communication for many users.</li>
+            <li>-- <b>Minimizes Text</b> -- <br />Visual media relies on images or diagrams to present information, reducing the need for text. </li>
+            <li>-- <b>Quick Message Delivery</b> -- <br />Unlike text-based media, visuals allow users to quickly understand and process the intended message.</li>
+            <li>-- <b>Accessible and Recognizable</b> -- <br />Visual media is versatile and can be easily accessed and identified due to its varied formats and styles.</li>
+            <li>-- <b>Easily Updated for Relevance</b> -- <br />Since visuals often reflect real-life events and trends, they can be updated easily to remain current.</li>
+            <li>-- <b>Highly Customizable and Varied</b> -- <br />Visual media can range from simple images to interactive and engaging tools, making it a preferred method of communication for many users.</li>
         </ul>
     </div>
 </body>
