--- a/pages/part3.html
+++ b/pages/part3.html
@@ -107,15 +107,6 @@
 
 <body oncontextmenu="return false;">
 
-    <!--
-    <div id="sidebar">
-        <li>
-            <ul><p id="facebook">Facebook</p></ul>
-            <ul><img id="sidebar_profile" src="../images/pfp1.png"><p>Profile</p></ul>
-        </li>
-    </div>
-    -->
-
     <div id="content">
         <p>Design Elements of a Visual Media - Elements?</p>
         <br />
@@ -127,16 +118,16 @@
 
         <p>Design Principles of Visual Media</p>
         <ul>
-            <li><b>Repetition</b>: <br />Consistent use of visual elements to create unity and cohesion.</li>
-            <li><b>Center of Interest</b>: <br />The focal point of a composition that immediately draws the viewer's
+            <li>-- <b>Repetition</b> -- <br />Consistent use of visual elements to create unity and cohesion.</li>
+            <li>-- <b>Center of Interest</b> -- <br />The focal point of a composition that immediately draws the viewer's
                 attention; it is the most critical aspect of visual media.</li>
-            <li><b>Balance</b>: <br />Achieving visual equality in terms of shape, form, color, and value, either
+            <li>-- <b>Balance</b> -- <br />Achieving visual equality in terms of shape, form, color, and value, either
                 through symmetry or asymmetry.</li>
-            <li><b>Harmony</b>: <br />Combining similar visual elements to create a unified and pleasing composition.
+            <li>-- <b>Harmony</b> -- <br />Combining similar visual elements to create a unified and pleasing composition.
             </li>
-            <li><b>Contrast</b>: <br />Highlighting differences in value to create emphasis or visual tension within a
+            <li>-- <b>Contrast</b> -- <br />Highlighting differences in value to create emphasis or visual tension within a
                 design. </li>
-            <li><b>Perspective</b>: <br />Arranging objects in a two-dimensional space to simulate depth and realism, as
+            <li>-- <b>Perspective</b> -- <br />Arranging objects in a two-dimensional space to simulate depth and realism, as
                 they appear in the real world.</li>
         </ul>
     </div>
